syntax = "proto3";

option csharp_namespace = "Micser.Common.Api";

service SettingsRpcService {
	rpc SetSetting (Setting) returns (Setting);
	rpc GetSetting (SettingKey) returns (Setting);
}

message Setting {
	string Key = 1;
	string Value = 2;
}

message SettingKey {
	string Key = 1;
}
